--- a/app.css
+++ b/app.css
@@ -5,13 +5,13 @@ body {
 	font-weight: 300;
 	background-color: #252525;
 }
-#wrapper {
+.codeplayer {
 	width: 99%;
 	margin: 0 auto;
 	padding: 0;
 }
 .clear {clear:both;}
-#header {
+.codeplayer__nav {
 	width: 100%;
 	height: 50px;
 	margin: 0;
@@ -20,18 +20,23 @@ body {
 	padding:2px;
 	border-bottom: 1px solid #333;
 }
-#header h1 {
+.codeplayer__nav:after {
+	clear: both;
+	content: '';
+	display: table;
+}
+.codeplayer__nav h1 {
 	font-size: 1.5em;
 	padding: 10px 0 0 60px;
 	margin: 0;
 	float: left;
 }
-#btnDiv {
+.codeplayer__button-container {
 	float: right;
 	margin: 0;
 	padding: 2px 60px 0 0;	
 }
-#runButton {
+.codeplayer__button {
 	padding: 10px 20px;
 	margin: 0;
 	background-color: green;
@@ -40,10 +45,10 @@ body {
 	font-weight: 700;
 	border-radius: 5px;
 }
-#runButton:hover {
+.codeplayer__button:hover {
 	background-color: #08C724;
 }
-#toggles {
+.codeplayer__toggles {
 	width: 216px;
 	margin: 0 auto;
 	list-style: none;
@@ -54,24 +59,24 @@ body {
 	position: relative;
 	top: 7px;
 }
-#toggles li {
+.codeplayer__toggle {
 	float: left;
 	border-right: 1px solid grey;
 	padding: 8px 9px;
 }
-li#last {
+.codeplayer__toggle.last {
 	border: none;
 }
-.selected {
+.codeplayer__toggle--selected {
 	background-color: #cfcfcf;
 }
-.codeContainer {
+.codeplayer__player {
 	height: 100%;
 	width: 50%;
 	position: relative;
 	float: left;
 }
-.codeContainer textarea {
+.codeplayer__player textarea {
 	width: 100%;
 	height:100%;
 	border: none;
@@ -83,7 +88,7 @@ li#last {
 	color: #00EBFF;
 	background-color: transparent;
 }
-.codeLabel {
+.codeplayer__label {
 	position: absolute;
 	right: 10px;
 	top: 10px;
@@ -102,7 +107,7 @@ iframe {
 	width: 100%;
 	border: none;
 }
-#resultsFrame {
+.codeplayer__results {
 		width: 100%;
 		height: 100%;
 		border: 0;
