--- a/app.css
+++ b/app.css
@@ -108,7 +108,8 @@ iframe {
 	border: none;
 }
 .codeplayer__results {
-		width: 100%;
-		height: 100%;
 		border: 0;
+}
+.codeplayer__results-frame {
+	background: red;
 }
