--- a/app.css
+++ b/app.css
@@ -1,5 +1,11 @@
 @charset "utf-8";
 /* CSS Document */
+body, html {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
 body {
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 	font-weight: 300;
@@ -7,10 +13,20 @@ body {
 }
 .codeplayer {
 	width: 99%;
+	height: 100%;
 	margin: 0 auto;
+	max-width: 100%;
 	padding: 0;
 }
-.clear {clear:both;}
+.codeplayer__row {
+	height: 45%;
+}
+.codeplayer__row:after {
+	clear: both;
+	content: '';
+	display: table;
+}
+
 .codeplayer__nav {
 	width: 100%;
 	height: 50px;
@@ -72,7 +88,7 @@ body {
 }
 .codeplayer__player {
 	height: 100%;
-	width: 50%;
+	width: 33.33%;
 	position: relative;
 	float: left;
 }
@@ -87,29 +103,26 @@ body {
 	padding: 5px;
 	color: #00EBFF;
 	background-color: transparent;
+	overflow-wrap: unset;
 }
 .codeplayer__label {
 	position: absolute;
 	right: 10px;
-	top: 10px;
+	bottom: 10px;
 	border-radius: 5px;
-	background-color: #f0f0f0;
+	background-color: rgba(255, 255, 255, .4);
+	color: #252525;
 	padding: 5px;
-}
-#CSSContainer,
-#JSContainer {
-	display: none;
 }
 iframe {
 	height: 100%;
 	position: relative;
-	left: 20px;
 	width: 100%;
 	border: none;
 }
-.codeplayer__results {
-		border: 0;
-}
-.codeplayer__results-frame {
-	background: red;
+.codeplayer__player-results {
+	border: 0;
+	border-top: 1px solid #fff;
+	position: relative;
+	height: 100%;
 }
